@@ -120,7 +120,7 @@ void PrefGeneral::setData(Preferences * pref) {
 
 	setInitialVolume( pref->initial_volume );
 	setDontChangeVolume( pref->dont_change_volume );
-	setUseVolume( pref->use_volume_option );
+	setUseVolume( pref->use_volume_option2 );
 	setAudioChannels( pref->initial_audio_channels );
 	setScaleTempoFilter( pref->use_scaletempo );
 }
@@ -172,7 +172,7 @@ void PrefGeneral::getData(Preferences * pref) {
 
 	pref->initial_volume = initialVolume();
 	pref->dont_change_volume = dontChangeVolume();
-	pref->use_volume_option = useVolume();
+	pref->use_volume_option2 = useVolume();
 	pref->initial_audio_channels = audioChannels();
 	TEST_AND_SET(pref->use_scaletempo, scaleTempoFilter());
 }
@@ -413,12 +413,12 @@ bool PrefGeneral::dontChangeVolume() {
 	return !change_volume_check->isChecked();
 }
 
-void PrefGeneral::setUseVolume(bool b) {
-	use_volume_option_check->setChecked(b);
+void PrefGeneral::setUseVolume(Preferences::OptionState value) {
+	use_volume_combo->setState(value);
 }
 
-bool PrefGeneral::useVolume() {
-	return use_volume_option_check->isChecked();
+Preferences::OptionState PrefGeneral::useVolume() {
+	return use_volume_combo->state();
 }
 
 void PrefGeneral::setStartInFullscreen(bool b) {
@@ -588,7 +588,7 @@ void PrefGeneral::createHelp() {
 	setWhatsThis(initial_volume_slider, tr("Default volume"),
 		tr("Sets the initial volume that new files will use.") );
 
-	setWhatsThis(use_volume_option_check, tr("Change volume just before playing"),
+	setWhatsThis(use_volume_combo, tr("Change volume just before playing"),
 		tr("If this option is checked the initial volume will be set by "
            "using the <i>-volume</i> option in MPlayer.<br> "
            "<b>WARNING: THE OFFICIAL MPLAYER DOESN'T HAVE THAT "
